--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Torneo y estadísticas</h1>
+    <h1>Torneo futbol 8 y estadísticas</h1>
 </body>
 </html>
