--- a/index.html
+++ b/index.html
@@ -4,9 +4,101 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script defer src="main.js"></script>
-    <title>Document</title>
+    <title>TodoTorneos</title>
+    <link rel="icon" href="/assets/images.png" type="image/x-icon">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Torneo futbol 8 y estadísticas</h1>
+    <header>        
+        <h3>TodoTorneos</h1>
+    </header>
+
+    <main>        
+        <div>
+            <h2>Actualmente disputando liga del sur</h2>
+        <table class="tabla">
+        <thead>
+            <tr>
+                <th>Nombre del Equipo</th>
+                <th>Partidos Jugados</th>
+                <th>Victorias</th>
+                <th>Empates</th>
+                <th>Derrotas</th>
+                <th>Puntos</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr>
+                <td>Parma Sur</td>
+                <td>11</td>
+                <td>7</td>
+                <td>3</td>
+                <td>1</td>
+                <td>24</td>
+            </tr>
+            <tr>
+                <td>Los Euca</td>
+                <td>11</td>
+                <td>6</td>
+                <td>3</td>
+                <td>2</td>
+                <td>21</td>
+            </tr>
+            <tr>
+                <td>El rejunte</td>
+                <td>11</td>
+                <td>6</td>
+                <td>1</td>
+                <td>4</td>
+                <td>19</td>
+            </tr>
+             <tr>
+                <td>Torino</td>
+                <td>11</td>
+                <td>5</td>
+                <td>3</td>
+                <td>3</td>
+                <td>18</td>
+            </tr>
+            <tr>
+                <td>Magios</td>
+                <td>11</td>
+                <td>5</td>
+                <td>3</td>
+                <td>3</td>
+                <td>18</td>
+            </tr>
+            <tr>
+                <td>Alvarado Fc</td>
+                <td>11</td>
+                <td>4</td>
+                <td>2</td>
+                <td>5</td>
+                <td>14</td>
+            </tr>
+            <tr>
+                <td>Madagascar</td>
+                <td>11</td>
+                <td>3</td>
+                <td>2</td>
+                <td>6</td>
+                <td>11</td>
+            </tr>
+            <tr>
+                <td>Viejo Estado</td>
+                <td>11</td>
+                <td>1</td>
+                <td>5</td>
+                <td>5</td>
+                <td>8</td>
+            </tr>
+        </tbody>
+        </table>
+        </div>
+    </main>
+
+    <footer>
+        <a href="#">Home</a>
+    </footer>
 </body>
 </html>
