--- a/index.html
+++ b/index.html
@@ -10,94 +10,26 @@
 </head>
 <body>
     <header>        
-        <h3>TodoTorneos</h1>
+        <h3>TodoTorneos</h3>
     </header>
 
     <main>        
         <div>
             <h2>Actualmente disputando liga del sur</h2>
-        <table class="tabla">
-        <thead>
-            <tr>
-                <th>Nombre del Equipo</th>
-                <th>Partidos Jugados</th>
-                <th>Victorias</th>
-                <th>Empates</th>
-                <th>Derrotas</th>
-                <th>Puntos</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Parma Sur</td>
-                <td>11</td>
-                <td>7</td>
-                <td>3</td>
-                <td>1</td>
-                <td>24</td>
-            </tr>
-            <tr>
-                <td>Los Euca</td>
-                <td>11</td>
-                <td>6</td>
-                <td>3</td>
-                <td>2</td>
-                <td>21</td>
-            </tr>
-            <tr>
-                <td>El rejunte</td>
-                <td>11</td>
-                <td>6</td>
-                <td>1</td>
-                <td>4</td>
-                <td>19</td>
-            </tr>
-             <tr>
-                <td>Torino</td>
-                <td>11</td>
-                <td>5</td>
-                <td>3</td>
-                <td>3</td>
-                <td>18</td>
-            </tr>
-            <tr>
-                <td>Magios</td>
-                <td>11</td>
-                <td>5</td>
-                <td>3</td>
-                <td>3</td>
-                <td>18</td>
-            </tr>
-            <tr>
-                <td>Alvarado Fc</td>
-                <td>11</td>
-                <td>4</td>
-                <td>2</td>
-                <td>5</td>
-                <td>14</td>
-            </tr>
-            <tr>
-                <td>Madagascar</td>
-                <td>11</td>
-                <td>3</td>
-                <td>2</td>
-                <td>6</td>
-                <td>11</td>
-            </tr>
-            <tr>
-                <td>Viejo Estado</td>
-                <td>11</td>
-                <td>1</td>
-                <td>5</td>
-                <td>5</td>
-                <td>8</td>
-            </tr>
-        </tbody>
-        </table>
+        <section id="section" class="tabla">
+
+        </section>
         </div>
+            <div class="card-container">
+                <article class="card1"><a href="./pages/inscripcion.html">Inscribir equipo</a></article>
+                <article class="card2">Suspenciones</article>
+                <article class="card3">Premios</article>
+            </div>
     </main>
 
-    <footer>
+    <footer class="footer">
+        <h4>TodoTorneos</h5>
+        <a href="#">Contacto</a>
         <a href="#">Home</a>
     </footer>
 </body>
