--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
             <div class="card-container">
                 <article class="card1"><a href="#miFormulario">Inscribir equipo</a></article>
-                <article class="card2">Suspenciones</article>
+                <article class="card2"><a href="">Suspenciones</a></article>
                 <article class="card3"><a href="./pages/premios.html">Premios</a></article>
             </div>
     </main>
