--- a/pages/premios.html
+++ b/pages/premios.html
@@ -12,9 +12,18 @@
     <main>
         <div class="premios">
             <h3>Liga del sur</h3>
-            <h5>Campeon</h5>
-            <h5>Subcampeon</h5>
-            <h5>Otro</h5>        
+            <div>
+                <h5>Campeon</h5>
+                <p>juego de 15 camisetas, cena para el equipo y reinscripcion gratuita</p>
+            </div>
+            <div>
+                <h5>Subcampeon</h5>
+                <p>juego de 12 shorts personalizados y pack de 12 cervezas</p>
+            </div>
+            <div>
+                <h5>Otro</h5>
+                <p>medalla de participacion y reinscripcion 50%off</p> 
+            </div>       
         </div>
          <section>
             <a href="../index.html">Inicio</a>
