github pages test

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="/js/premios.js"></script>
-    <script src="/js/equipos.js"></script>
+    <script defer src="/js/premios.js"></script>
+    <script defer src="/js/equipos.js"></script>
     <script defer src="/js/main.js"></script>
     <title>TodoTorneos</title>
     <link rel="icon" href="/assets/images.png" type="image/x-icon">
