--- a/pages/premios.html
+++ b/pages/premios.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="/js/premios.js"></script> 
     <script defer src="/js/main.js"></script>
+    <script defer src="/js/premios.js"></script>
     <title>TodoTorneos</title>
     <link rel="icon" href="/assets/images.png" type="image/x-icon">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/style.css">   
 </head>
 <body>
     <header>        
@@ -17,7 +17,7 @@
         </nav>
     </header>
     <main>
-       <section id="productos-container"></section>
+            <section id="productos-container"></section>
     </main>
     <footer class="footer">
         <h4>TodoTorneos</h5>
