--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script defer src="/js/premios.js"></script>
-    <script defer src="/js/equipos.js"></script>
+     <!-- BOOTSTRAP -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <script defer src="/js/main.js"></script>
     <title>TodoTorneos</title>
     <link rel="icon" href="/assets/images.png" type="image/x-icon">
@@ -46,7 +46,7 @@
                 <article class="card1"><a href="#">Fotos torneo</a></article>
                 <article class="card2"><a href="#">Suspenciones</a></article>
                 <article class="card3"><a href="./pages/premios.html">Canjear Premios</a></article>
-            </div>
+            </div><section id="productos-container"></section>
     </main>
 
     <footer class="footer">
@@ -54,5 +54,10 @@
         <a href="#">Contacto</a>
         <a href="#">Inicio</a>      
     </footer>
+
+    <!-- SWEETALERT -->
+     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+     <!-- BOOTSTRAP JS -->
+     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 </body>
 </html>
