--- a/index.html
+++ b/index.html
@@ -45,8 +45,9 @@
             <div class="card-container">
                 <article class="card1"><a href="#">Fotos torneo</a></article>
                 <article class="card2"><a href="#">Suspenciones</a></article>
-                <article class="card3"><a href="./pages/premios.html">Canjear Premios</a></article>
-            </div><section id="productos-container"></section>
+            </div>
+            <section id="productos-container">
+            </section>
     </main>
 
     <footer class="footer">
