--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
      <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <script defer src="/js/main.js"></script>
-    <script defer src="/js/carrito.js"></script>
+    <script defer src="/js/vouchers.js"></script>
     <title>TodoTorneos</title>
     <link rel="icon" href="/assets/images.png" type="image/x-icon">
     <link rel="stylesheet" href="/css/style.css">
@@ -15,7 +15,7 @@
     <header>        
         <nav>
             <h3>TodoTorneos</h3>
-            <a id="cart" href="./pages/premios.html"><img src="./assets/premios.png" alt="premios"><span id="cuenta-premios">0</span></a>
+            <a id="cart" href="./pages/carrito.html"><img src="./assets/premios.png" alt="premios"><span id="cuenta-premios">0</span></a>
         </nav>
     </header>
 
@@ -40,7 +40,6 @@
         <div>
             <h2 class="liga">Actualmente disputando liga del sur</h2>
         <section id="section" class="tabla">
-
         </section>
         </div>
             <div class="card-container">
