--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -5,11 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
          <!-- BOOTSTRAP -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
-    <script defer src="/js/main.js"></script>
     <script defer src="/js/carrito.js"></script>
+    <script defer src="/js/vouchers.js"></script>
     <title>TodoTorneos</title>
     <link rel="icon" href="/assets/images.png" type="image/x-icon">
-    <link rel="stylesheet" href="/css/style.css">   
+    <link rel="stylesheet" href="/css/carrito.css">    
 </head>
 <body>
     <header>        
@@ -19,7 +19,13 @@
         </nav>
     </header>
     <main>
+        <p id="carrito-vacio">No se seleccionaron vouchers. <a href="/index.html">Ir a inicio</a></p>
             <section id="productos-container"></section>
+            <section id="totales">
+                <p>Total unidades: <span id="unidades">0</span></p>
+                <button>Descargar</button>
+                <button id="reiniciar">Reiniciar carrito</button>
+            </section>
     </main>
     <footer class="footer">
         <h4>TodoTorneos</h5>
