--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 
     <footer class="footer">
         <h4>TodoTorneos</h5>
-        <a href="#">Contacto</a>
+        <a href="/pages/carrito.html">Carrito</a>
         <a href="#">Inicio</a>      
     </footer>
 
