--- a/pages/carrito.html
+++ b/pages/carrito.html
@@ -7,7 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
     <script defer src="/js/carrito.js"></script>
     <script defer src="/js/vouchers.js"></script>
-    <title>TodoTorneos</title>
+    <title>TodoTorneos | Carrito</title>
     <link rel="icon" href="/assets/images.png" type="image/x-icon">
     <link rel="stylesheet" href="/css/carrito.css">    
 </head>
@@ -29,7 +29,7 @@
     </main>
     <footer class="footer">
         <h4>TodoTorneos</h5>
-        <a href="#">Contacto</a>
+        <a href="#">Carrito</a>
         <a href="/index.html">Inicio</a>      
     </footer>
 
